[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icp-lattice-calculator"
version = "0.1.0"
description = "Crystallographic lattice calculations and instrument angle transformations"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["crystallography", "neutron scattering", "lattice", "triple axis"]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.17.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/icp-lattice-calculator"
"Bug Tracker" = "https://github.com/yourusername/icp-lattice-calculator/issues"
"Documentation" = "https://github.com/yourusername/icp-lattice-calculator#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "flake8>=3.9.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lattice_calculator*"]

[tool.setuptools.package-data]
lattice_calculator = ["py.typed"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"